--- a/VirtualEnvironment/VirtualEnvironment/VirtualEnvironment.vcxproj.filters
+++ b/VirtualEnvironment/VirtualEnvironment/VirtualEnvironment.vcxproj.filters
@@ -27,6 +27,9 @@
     <ClCompile Include="..\..\CommonLib\VirEnv_Wrapper.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="..\..\CommonLib\ConfigHelper.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="..\..\CommonLib\VirEnvHelper.h">
@@ -42,6 +45,9 @@
       <Filter>Source Files</Filter>
     </ClInclude>
     <ClInclude Include="..\..\CommonLib\VirEnv_Wrapper.h">
+      <Filter>Source Files</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\CommonLib\ConfigHelper.h">
       <Filter>Source Files</Filter>
     </ClInclude>
   </ItemGroup>
