--- a/tests/SpeedLimit/config_sumo.yaml
+++ b/tests/SpeedLimit/config_sumo.yaml
@@ -19,7 +19,7 @@ SimulationSetup:
     EnableRealSim: true
     
     # Whether or not to save verbose log during the simulation. skip log can potentially speed up
-    EnableVerboseLog: true
+    EnableVerboseLog: false
     
     # specify which traffic simulator
     # VISSIM or SUMO
@@ -28,16 +28,10 @@ SimulationSetup:
     #SelectedTrafficSimulator: 'VISSIM'
     SelectedTrafficSimulator: 'SUMO'
 
-    # if not specified, default will be localhost
-    TrafficSimulatorIP: "127.0.0.1"
-    
-    # if not specified, default will be 1337
-    TrafficSimulatorPort: 1337
-
     # default will send all
-    VehicleMessageField: [id, speed, acceleration, speedDesired, hasPrecedingVehicle, precedingVehicleDistance, precedingVehicleSpeed, signalLightId, signalLightHeadId, signalLightDistance, signalLightColor, speedLimit, speedLimitNext, speedLimitChangeDistance, heading, grade, activeLaneChange]
-    # VehicleMessageField: [id, speed, acceleration, speedDesired]
-    
+    VehicleMessageField: [id, type, vehicleClass, speed, acceleration, positionX, positionY, positionZ, color, linkId, laneId, distanceTravel, speedDesired, heading, grade]
+
+
 # setup Application Layer
 ApplicationSetup:
     # turn on/off application layer
@@ -45,11 +39,7 @@ ApplicationSetup:
     
     #--------------------------------------------------
     VehicleSubscription: 
-    # -   type: vehicleType
-        # attribute: {id: ['1000'], radius: [0]}
-        # ip: ["127.0.0.1"]
-        # port: [2333]
-        
+
 # subscription in XilSetup must be subset of ApplicationSetup
 XilSetup:
     # enable/disable XIL
@@ -62,14 +52,53 @@ XilSetup:
     #
     # radius 0 means only the ego vehicle is sent to Xil
     #--------------------------------------------------
+    # for sumo-ipg, essentially give any name you want to name the ego, and the interface will create the vehicle in sumo at start of the simulation
     VehicleSubscription: 
     -   type: ego
-        attribute: {id: ['t_passenger'], radius: [0]}
-        ip: ["127.0.0.1"]
-        port: [2333]
+        attribute: {id: ['egoCm'], radius: [100]} 
+        ip: ["160.91.113.184"]
+        port: [7331]
+    # -   type: ego
+        # attribute: {id: ['egoCm'], radius: [0]} 
+        # ip: ["127.0.0.1"]
+        # port: [2333]
+    SignalSubscription:
+    # -   type: intersection
+        # attribute: {name: ['2117']}
+        # ip: ['127.0.0.1']
+        # port: [7331]
+    -   type: intersection
+        attribute: {name: ['J1']}
+        ip: ['160.91.113.184']
+        port: [2444]    
 
+CarMakerSetup:
+    # whether or not enable CarMaker (default: false)
+    EnableCosimulation: true
     
+    # if true, ego state is sent from Simulink.
+    # if false, ego state is sent from User.cpp 
+    EnableEgoSimulink: false
     
+    # # Ip and Port settings 
+    # # if no setting, need to make sure have one and only one vehicle id subscription, which will be used as ip and port
+    # # if set, will use whatever set here instead of what is defined in subscription
+    CarMakerIP: 160.91.113.184
     
+    CarMakerPort: 7331
+    
+    # # refresh rate, default Traffic Objects updates every 0.001 seconds
+    # TrafficRefreshRate: 0.001
+    
+    # # ego settings
+    # # if no setting, need to make sure have one and only one vehicle id subscription, which will be used as ego
+    # # if no type, will add the vehicle using sumo default vehicle type
+    # # if set, will use whatever set here instead of what is defined in subscription
+    # EgoId: egoCm
+    
+    # EgoType: DEFAULT_PEDTYPE
+    
+    # transmit real-time traffic signal light information 
+    SynchronizeTrafficSignal: true
     
     
